# pathlab

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  agents.md  index.html  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml
assets/: example_1.pbm  example_2.pbm  example_3.pbm  sample.pbm
docs/: adding-a-maze.md  adding-an-algorithm.md  algorithms.md  architecture.md  maze-format.md  web-build.md
scripts/: install-hooks.sh  pre-commit
src/: lib.rs  main.rs
src/app/: canvas.rs  mod.rs  side_panel.rs  state.rs  top_bar.rs  undo.rs
src/mazes/: cell.rs  generators.rs  mod.rs  pbm.rs
src/platform/: fileio.rs  mod.rs  time.rs
src/solver/: algorithm.rs  core.rs  heuristic.rs  k_paths.rs  mod.rs  solver.rs
