[package]
name = "maze_solver"
version = "0.2.0"
edition = "2021"
authors = ["Matej Michalek"]
description = "Cross-platform pathfinding visualizer (A*, BFS, DFS) built with egui."
license = "MIT"

[lib]
name = "maze_solver"
path = "src/lib.rs"

[[bin]]
name = "maze_solver"
path = "src/main.rs"

[dependencies]
eframe = "0.33"
egui_extras = "0.33"
# Cross-platform monotonic clock - works on both native and wasm.
web-time = "1.1"

# Native-only deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

# Web-only deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement", "HtmlInputElement",
    "HtmlAnchorElement", "FileList", "File", "FileReader", "Blob", "Url",
    "Event", "EventTarget", "console",
] }

[profile.release]
opt-level = 3
lto = "thin"
